@@ -1,3 +1,9 @@
+xboxdrv 0.4 - (25/Dec/2008)
+===========================
+
+* added --square-axis option
+
+
 xboxdrv 0.3 - (06/Nov/2008)
 ============================
 
